# empire-sphinx-theme

./: README.md  pyproject.toml  setup.py  theme.conf  your_package.py
empire_sphinx_theme/: theme.conf
src/empire_sphinx_theme/: theme.conf
src/empire_sphinx_theme/theme/empire_sphinx_theme/: theme.conf
