[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "empire-sphinx-theme"
description = "Sphinx Theme for Empire project"
version = "1.0"

requires-python = ">=3.7"
dependencies = [
  "sphinx >= 6.0,<8.0",
  "sphinx-basic-ng",
  "pygments >= 2.7",
]

license = { file = "LICENSE"}
authors = [
    {name = "Yann Tremblay", email = "yanntremblay@tombmyst.ca"},
]
classifiers = [
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]

[project.entry-points]
"sphinx.html_themes" = {empire_sphinx_theme = "empire_sphinx_theme"}
